Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kimai-service
  namespace: kimai
spec:
  selector:
    app: kimai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
